# GuiLiteSamples

./: .gitignore  C# vs C++ vs Android.rar  README.md  README_zh.md  build-all.sh  xmake.lua
.github/: .build-all.sh  (+2 more)
Hello3D/BuildLinux/: .sync_build.sh  CMakeLists.txt  HelloCube  main.cpp  std_io.cpp
HelloAnimation/BuildLinux/: .sync_build.sh  CMakeLists.txt  main.cpp  std_io.cpp
HelloAzureIoT/BuildAzurePnp/: CMakeLists.txt  README.md  func.cpp  main-adu.c  main.c
HelloAzureIoT/BuildAzurePnp/adu/: AduUpdate.psm1  buildManifest.ps1  updatePayload.txt
HelloAzureIoT/BuildAzurePnp/include/azure_c_shared_utility/: agenttime.h  buffer_.h  const_defines.h  crt_abstractions.h  map.h  optimize_size.h  shared_util_options.h  strings.h  strings_types.h  threadapi.h  xlogging.h
HelloAzureIoT/BuildAzurePnp/include/azure_macro_utils/: macro_utils.h  macro_utils_generated.h
HelloAzureIoT/BuildAzurePnp/include/azure_prov_client/: iothub_security_factory.h  prov_client_const.h  prov_device_client.h  prov_device_ll_client.h  prov_security_factory.h  prov_transport.h  prov_transport_mqtt_client.h
HelloAzureIoT/BuildAzurePnp/include/iothub_client/: iothub.h  iothub_client_core_common.h  iothub_client_core_ll.h  iothub_client_ll.h  iothub_client_options.h  iothub_device_client.h  iothub_device_client_ll.h  iothub_message.h  iothub_transport_ll.h  iothubtransportmqtt.h
HelloAzureIoT/BuildAzurePnp/pnp/common/: pnp_device_client_ll.h  pnp_dps_ll.c  pnp_dps_ll.h
HelloFFmpeg/BuildLinux/: .sync_build.sh  CMakeLists.txt  main.cpp  std_io.cpp
HelloFont/BuildLinux/: .sync_build.sh  CMakeLists.txt  main.cpp  std_io.cpp
HelloFont/UIcode/: CMakeLists.txt  UIcode.cpp  UIcode.vcxproj  UIcode.vcxproj.filters
HelloFont/UIcode/resource/: KaiTi_33B.cpp
HelloFreetype/BuildLinux/: .sync_build.sh  CMakeLists.txt  main.cpp  std_io.cpp
HelloGuiLite/BuildLinux/: CMakeLists.txt  Display.html  HelloGuiLite  main.cpp  std_io.cpp
HelloMario/BuildLinux/: .sync_build.sh  CMakeLists.txt  main.cpp
HelloParticle/BuildLinux/: .sync_build.sh  CMakeLists.txt  main.cpp
HelloSlide/BuildLinux/: .sync_build.sh  CMakeLists.txt  HelloSlide  main.cpp  std_io.cpp  xWindow
HelloStar/BuildLinux/: .sync_build.sh  CMakeLists.txt  main.cpp
HelloWave/BuildSTM32F429-Gcc/guiLite_stm32f429/: CMakeLists.txt  README.md
HelloWave/BuildSTM32F429-Gcc/guiLite_stm32f429/base/: CMakeLists.txt  stm32f4xx.h
HelloWave/BuildSTM32F429-Gcc/guiLite_stm32f429/gui/: CMakeLists.txt  bitmap.cpp  button.cpp  cmd_target.cpp  dialog.cpp  display.cpp  edit.cpp  gesture.cpp  keyboard.cpp  label.cpp  list_box.cpp  my_resource.cpp  slide_group.cpp  spinbox.cpp  surface.cpp  table.cpp  wave_ctrl.cpp  wnd.cpp  word.cpp
HelloWave/BuildSTM32F429-Gcc/guiLite_stm32f429/gui/core_include/: api.h
HelloWave/BuildSTM32F429-Gcc/guiLite_stm32f429/main/: CMakeLists.txt  Lucida_Console_48.cpp  Microsoft_YaHei_25.cpp  UIcode.cpp  main.c  main.h  stm32f4xx_it.c  stm32f4xx_it.h  syscalls.c
HelloWave/BuildSTM32F429-Gcc/guiLite_stm32f429/song/: CMakeLists.txt  antialiasing.c  antialiasing.h  color.c  color.h  font.h  font12.c  font16.c  font20.c  font24.c  fonts.h  ltdc.c  ltdc.h  memalloc.c  memalloc.h  sdram.c  sdram.h  stm32f429i_discovery.h  stm32f429i_discovery_ioe.c  stm32f429i_discovery_ioe.h  stm32f429i_discovery_sdram.h  stm32f4xx_fmc.c  stm32f4xx_fmc.h  stm32f4xx_i2c.c  stm32f4xx_i2c.h  sys.c  sys.h  usart.c  usart.h
HostMonitor/BuildLinux/: .sync_build.sh  .sync_data.sh  CMakeLists.txt  HostMonitor  display  main.cpp  sample_native  send_data_to_cloud.sh  std_io.cpp
HostMonitor/BuildLinux/display.src/: mainwindow.cpp  mainwindow.h
HostMonitor/BuildLinux/prebuild/x64/: sample_native
HostMonitor/BuildLinux/prebuild/x86/: display
HostMonitor/BuildMacCmd/: CMakeLists.txt  Display.html  main.cpp  std_io.cpp
HostMonitor/SampleCode/: CMakeLists.txt  sample.vcxproj  sample.vcxproj.filters
HostMonitor/SampleCode/gui_include/: my_resource.h
HostMonitor/SampleCode/include/: define.h
HostMonitor/SampleCode/source/: CMakeLists.txt
HostMonitor/SampleCode/source/data/: data_source.cpp  database.cpp
HostMonitor/SampleCode/source/manager/: value_ctrl_manager.cpp  value_manager.cpp  value_manager.h  wave_manager.cpp  wave_manager.h
HostMonitor/SampleCode/source/modules/: demo_module.cpp  demo_module.h  module_group.cpp
HostMonitor/SampleCode/source/resource/: resource.cpp
HostMonitor/SampleCode/source/start/: app_entry.cpp  app_interface.cpp  host_monitor.cpp  start.cpp  start_jni.cpp
HostMonitor/SampleCode/source/ui_ctrl_ex/: ecg_wave_ctrl.cpp  ecg_wave_ctrl.h  time_bar.cpp  time_bar.h  time_label.cpp  trend_graph.cpp  trend_graph.h  trend_table.cpp  value_ctrl.cpp  value_ctrl.h  value_sub_ctrl.cpp  value_view.cpp  wave_ctrl_ex.cpp
HostMonitor/SampleCode/source/ui_tree/: root.cpp  slide_config.cpp  slide_ecg_7wave.cpp  slide_main.cpp  slide_mini_trend.cpp  slide_mini_wav.cpp  slide_trend.cpp
HostMonitor/UIcode/: CMakeLists.txt  display  sample.sln  sample.vcxproj  sample.vcxproj.filters
HostMonitor/UIcode/core_include/: display.h
HostMonitor/UIcode/include/: GuiLite.h  ctrl_id.h  define.h  msg_id.h
HostMonitor/UIcode/source/: CMakeLists.txt
HostMonitor/UIcode/source/data/: database.cpp  database.h
HostMonitor/UIcode/source/manager/: value_ctrl_manager.cpp  value_manager.cpp  wave_manager.cpp  wave_manager.h
HostMonitor/UIcode/source/modules/: demo_module.cpp  module_group.cpp  module_group.h
HostMonitor/UIcode/source/resource/: resource.cpp
HostMonitor/UIcode/source/start/: app_interface.cpp  host_monitor.cpp
HostMonitor/UIcode/source/ui_ctrl_ex/: time_bar.cpp  time_bar.h  time_label.cpp  time_label.h  trend_graph.cpp  trend_graph.h  trend_table.cpp  trend_table.h  value_ctrl.cpp  value_ctrl.h  value_sub_ctrl.cpp  value_sub_ctrl.h  value_view.cpp  value_view.h  wave_ctrl_ex.cpp  wave_ctrl_ex.h
HostMonitor/UIcode/source/ui_layout/: root.cpp  slide_config.cpp  slide_ecg_7wave.cpp  slide_main.cpp  slide_mini_trend.cpp  slide_mini_wav.cpp  slide_trend.cpp
HostMonitor/UIcode/source/ui_tree/: root.cpp
(+1655 files in other folders)
